Context and functions

--- a/.github/workflows/first-action.yml
+++ b/.github/workflows/first-action.yml
@@ -1,5 +1,5 @@
 name: Test project
-on: [push, workflow_dispatch]
+on: [push, workflow_dispatch] # Multiple triggers
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -15,7 +15,7 @@ jobs:
       - name: Run tests
         run: npm test
   deploy:
-    needs: test
+    needs: test # Dependencia
     runs-on: ubuntu-latest
     steps:
       - name: Get code
@@ -30,4 +30,9 @@ jobs:
         run: npm run build
       - name: Deploy
         run: echo "Deploying ..."
+  info:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Output Github context
+        run: echo "${{ toJson(github) }}" # Context y funciones
         
